# dwc

./: .clang-format  .gitignore  LICENSE  README.md  compile_commands.json  config  dwc.desktop  log  meson.build
include/: input.h  input.hpp  layer-shell.hpp  output.h  output.hpp  root.hpp  server.h  server.hpp  toplevel.h  toplevel.hpp  util.hpp  wlr-wrapper.hpp  wlr.h  wlr.hpp  wlr_wrappers.h  wlr_wrappers.hpp  workspace.hpp  xdg-shell.hpp
include/config/: commands.hpp  config.hpp  parser.hpp
src/: input.cpp  layer-shell.cpp  main.cpp  output.cpp  root.cpp  server.cpp  toplevel.cpp  util.cpp  wlr-wrapper.cpp  workspace.cpp  xdg-shell.cpp
src/config/: commands.cpp  config.cpp  parser.cpp
